--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,6 @@
 body {
-  background-color: rgb(203 213 225);
-  min-height: 100vh;
   margin: 0;
+  background: initial;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
